@@ -4,6 +4,8 @@ Business lite Changelog
 
 Version 3.0.9 (04-17-12)
 -Removed ereg_replace from Google Font code for PHP 5.3 compatibility. 
+-Re-added IE Quirks fix. 
+-Removed several unecessary options from theme options.
 
 Version 3.0.8 (04-10-12)
 -Added Hebrew language files.
